Bug 43534 - EDITING: CELL doesn't support external references.
Summary: EDITING: CELL doesn't support external references.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: Other All
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:3.5
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-05 06:41 UTC by Kohei Yoshida
Modified: 2011-12-07 19:36 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kohei Yoshida 2011-12-05 06:41:35 UTC
Built-in CELL function doesn't support external references, but it should.
Comment 1 Kohei Yoshida 2011-12-05 06:44:37 UTC
Another external ref bug.  I should fix this for 3.5.
Comment 3 Kohei Yoshida 2011-12-07 10:37:31 UTC
Initially just COL and ROW.

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c8552bc97b9f860494bc45091936010d98fff1cb

More on the way.
Comment 4 Kohei Yoshida 2011-12-07 19:36:44 UTC
Now officially fixed.

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2419d3c2de9ddcf1c9884d4216775ce70f652f5a

We intentionally don't support PROTECT, PREFIX and WIDTH with external references.