fdo#43534: Partially support external refs in CELL function.

For now, only COL and ROW are supported.  More on the way.  Note that
we can't support all the information types that we do for internal
references.